sound via click

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    <!-- Made with ❤️ by Yashpreet Singh. -->
+    <!-- Made by Yashpreet Singh. -->
   </footer>
 
   <script src="./index.js"></script>
